style.css
/* fonts */
@import url('https://fonts.googleapis.com/css?family=Quicksand');
@import url('https://fonts.googleapis.com/css?family=Quicksand:500');
@import url('https://fonts.googleapis.com/css?family=Work+Sans:200');

/* text css */
body{
    overflow-x:hidden;
}

h1 {
	text-align: center;
	font-family: 'Work Sans', sans-serif;
	font-size: 50px;
	margin-top: -15px;
}

h2 {
	margin-top: 25px;
	text-align: center;
	font-family: 'Work Sans', sans-serif;
}

a{
	text-decoration: none;
	color: #1629F9;
}

article{
	margin-left: auto;
	margin-right: auto;
}

p{
	letter-spacing: 3px;
	line-height: 27px;
	font-size: 15px;
	width: 550px;
	text-align: center;
	margin-right: auto;
	margin-left: auto;
	font-family: 'Quicksand', sans-serif;
	color: #222b2e;
}

p.indent{
	padding-bottom: 15px;
}

/* image stuff */
img{
	display: block;
	margin-left: auto;
	margin-right: auto;
	margin-top: -65px;
	margin-bottom: -15px;
}

img.padding{
	padding-top: 100px;
	padding-bottom: 65px;
}

img.aboutImage{
	float: right;
}

/* classes info */
.wrapper{
	display: block;
	width: 1370px;
	margin-left: auto;
	margin-right: auto;
	overflow: auto;
}

.aboutWrapper{
	padding-top: 65px;
	padding-bottom: 65px;
	height: 550px;
	overflow: hidden;
}

.aboutText{
	margin-top: -25px;
	width: 650px;
}

.project{
	float: left;
	width: 350px;
	display: block;
	padding: 50px;
	margin-right: auto;
}

.project2{
	float: left;
	overflow: auto;
	width: 350px;
	display: block;
	padding: 50px;
}

.project3{	
	overflow: auto;
	width: 350px;
	display: block;
	padding: 50px;
}

/* project text */
p.ptTitle{
	font-size: 14px;
	letter-spacing: 2px;
	width: 95%;
	line-height: 20px;
	font-weight: 500;
}

p.pt{
	font-size: 11px;
	letter-spacing: 2px;
	width: 350px;
	line-height: 20px;
	text-align: center
}

/* code intro image */
.fadeIn{
	animation-name: fadeIn;
	-webkit-animation-name: fadeIn;	

	animation-duration: 1.5s;	
	-webkit-animation-duration: 1.5s;

	animation-timing-function: ease-in-out;	
	-webkit-animation-timing-function: ease-in-out;		

	visibility: visible !important;	
}
@keyframes fadeIn {
	0% {
		transform: scale(0);
		opacity: 0.0;		
	}
	60% {
		transform: scale(1.1);	
	}
	80% {
		transform: scale(0.9);
		opacity: 1;	
	}	
	100% {
		transform: scale(1);
		opacity: 1;	
	}		
}
@-webkit-keyframes fadeIn {
	0% {
		-webkit-transform: scale(0);
		opacity: 0.0;		
	}
	60% {
		-webkit-transform: scale(1.1);
	}
	80% {
		-webkit-transform: scale(0.9);
		opacity: 1;	
	}	
	100% {
		-webkit-transform: scale(1);
		opacity: 1;	
	}		
}

